# Multi-DIC

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  environment.yml  multi-dic-skill.md  pyproject.toml  run.py
.github/scripts/: strip_gnu_property.py
.github/workflows/: wheels.yml
case/ComplexCylinderDIC/: simulate_chessboard.py  simulate_cylinder.py
case/ComplexCylinderDIC/calibrate_images/: chessboard_meta.json
case/CylinderDIC/: simulate_chessboard.py  simulate_cylinder.py
case/CylinderDIC/calibrate_images/: chessboard_meta.json
configs/: MDIC.yaml
docs/: ARCHITECTURE.md  NCORR_DIC2D_DESIGN.md  PACKAGING.md  SETUP.md  pymultidic_usage_en.md
docs/results/cylinderdic/: pipeline_report.json  recon3d_002.ply  recon3d_report.json  sparse_point_filter.json
multidic/: __init__.py  cli.py  config.py  dic2d.py  image_io.py  mask.py  recon3d.py  scale.py  sfm.py  validate.py  visualization.py
multidic/colmap_backends/: __init__.py  base.py  native_colmap_backend.py  products.py  pycolmap_backend.py
native/: CMakeLists.txt
native/colmap/: CMakeLists.txt  README.md
native/colmap/src/: colmap_bindings.cpp  colmap_bitmap_stub.cpp  colmap_sparse_mapper.cpp  colmap_sparse_mapper.h  feature.cpp  feature.h  geometry.cpp  geometry.h  incremental_sfm.cpp  incremental_sfm.h  model_io.cpp  model_io.h  sfm_types.h
native/colmap/src/colmap/estimators/cost_functions/: reprojection_error.h
native/colmap/src/colmap/util/: file.cc  version.cc
native/colmap/upstream/src/pycolmap/geometry/: homography_matrix.cc
native/ncorr/: CMakeLists.txt  Makefile  README.md
native/ncorr/include/: ncorr_api.h
native/ncorr/src/: ncorr_api.cpp
native/ncorr/tests/: smoke_ncorr_api.cpp
native/ncorr/tools/: ncorr_cli.cpp
native/recon3d/: CMakeLists.txt  README.md
native/recon3d/src/: recon3d_bindings.cpp
native/recon3d/tests/: compare_native_numpy.py
pymultidic/: __init__.py  api.py  cli.py
