[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-dic"
version = "0.1.0"
description = "Config-driven calibration-free multi-view DIC workflow."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
  "pycolmap==4.1.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
native = [
  "cmake>=3.20",
  "ninja>=1.11",
  "pybind11>=2.11",
]

[project.scripts]
mdic = "multidic.cli:main"

[tool.setuptools.packages.find]
include = ["multidic*"]
