[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "pymultidic"
version = "0.1.1"
description = "Config-driven calibration-free multi-view DIC workflow."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LeeBDa", email = "liboda1101@gmail.com" },
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
  "pycolmap==4.1.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
build = [
  "cmake>=3.20",
  "cibuildwheel>=2.20",
  "ninja>=1.11",
  "pybind11>=2.11",
  "twine>=5.0",
  "build>=1.2",
]

[project.scripts]
pymultidic = "pymultidic.cli:main"
mdic = "pymultidic.cli:main"

[project.urls]
Homepage = "https://github.com/lbd-hfut/Multi-DIC"
Repository = "https://github.com/lbd-hfut/Multi-DIC"
Issues = "https://github.com/lbd-hfut/Multi-DIC/issues"

[tool.scikit-build]
cmake.source-dir = "native"
wheel.packages = ["multidic", "pymultidic"]
sdist.exclude = [
  ".claude",
  "build",
  "case",
  "dist",
  "reference_code_lib",
]

[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"
